--- a/views/entries/index.ejs
+++ b/views/entries/index.ejs
@@ -3,7 +3,7 @@
 <h1>Hello <%= name %></h1>
 
 <ul>
-<% for(var i=0; i<entries.length; i++) { %>
+<% for(var i=0; i< entry.length; i++) { %>
  <li>
    <a href='/entries/<%= entries[i].id %>' ><%= entries[i].slug %></a>
    <a href='/entries/<%= entries[i].id %>/edit'>Edit</a>
